--- a/Natukula_Pavan_Kalyan_Assignment02.ipynb
+++ b/Natukula_Pavan_Kalyan_Assignment02.ipynb
@@ -1204,6 +1204,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Assignment was good but it was hard. The good thing is this assignment helps to learn how to webscrap any website."
+      ],
+      "metadata": {
+        "id": "ywc2n0q1u31U"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "JbTa-jDS-KFI"
       },
